<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_padding_margin"
    android:layout_margin="@dimen/default_padding_margin"
    android:background="@drawable/background_item_home"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imvPicture"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvPicture"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_image_size"
        app:srcCompat="@drawable/images"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_home_favourite"
        android:drawableStart="@drawable/ic_favorite_black_24dp"
        android:drawableLeft="@drawable/ic_favorite_black_24dp"
        android:drawablePadding="@dimen/default_padding_margin"
        android:layout_marginTop="@dimen/default_padding_margin"
        app:layout_constraintTop_toBottomOf="@+id/imvPicture"
        app:layout_constraintEnd_toStartOf="@+id/tvComment"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_home_comment"
        android:drawablePadding="@dimen/default_padding_margin"
        android:drawableStart="@drawable/ic_comment_black_24dp"
        android:drawableLeft="@drawable/ic_comment_black_24dp"
        android:layout_marginTop="@dimen/default_padding_margin"
        app:layout_constraintTop_toBottomOf="@+id/imvPicture"
        app:layout_constraintStart_toEndOf="@id/tvLike"
        app:layout_constraintEnd_toStartOf="@id/tvShare"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_home_share"
        android:drawablePadding="@dimen/default_padding_margin"
        android:drawableStart="@drawable/ic_share_black_24dp"
        android:drawableLeft="@drawable/ic_comment_black_24dp"
        android:layout_marginTop="@dimen/default_padding_margin"
        app:layout_constraintTop_toBottomOf="@+id/imvPicture"
        app:layout_constraintStart_toEndOf="@id/tvComment"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>